sfdx/force-app/main/default/objects/Activity/fields/CTI_AgentType__c.field-meta.xml
<CustomField>
    <fullName>CTI_AgentType__c</fullName>
    <label>CTI AgentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>