sfdx/force-app/main/default/objects/Activity/fields/CTI_Called__c.field-meta.xml
<CustomField>
    <fullName>CTI_Called__c</fullName>
    <label>CTI Called</label>
    <type>Phone</type>
</CustomField>