sfdx/force-app/main/default/objects/Activity/fields/CTI_Caller__c.field-meta.xml
<CustomField>
    <fullName>CTI_Caller__c</fullName>
    <label>CTI Caller</label>
    <type>Phone</type>
</CustomField>