sfdx/force-app/main/default/objects/Activity/fields/CTI_CallReference__c.field-meta.xml
<CustomField>
    <fullName>CTI_CallReference__c</fullName>
    <label>CTI CallReference</label>
    <type>Url</type>
</CustomField>