sfdx/force-app/main/default/objects/Activity/fields/CTI_GUID__c.field-meta.xml
<CustomField>
    <fullName>CTI_GUID__c</fullName>
    <label>CTI GUID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>