sfdx/force-app/main/default/objects/Activity/fields/CTI_Language__c.field-meta.xml
<CustomField>
    <fullName>CTI_Language__c</fullName>
    <label>CTI Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>