sfdx/force-app/main/default/objects/Activity/fields/CTI_PQValue__c.field-meta.xml
<CustomField>
    <fullName>CTI_PQValue__c</fullName>
    <label>CTI PQValue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>