sfdx/force-app/main/default/objects/Activity/fields/CTI_UCID__c.field-meta.xml
<CustomField>
    <fullName>CTI_UCID__c</fullName>
    <label>CTI UCID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>