sfdx/force-app/main/default/objects/Activity/fields/CTI_UUI__c.field-meta.xml
<CustomField>
    <fullName>CTI_UUI__c</fullName>
    <label>CTI_UUI</label>
    <length>96</length>
    <type>Text</type>
</CustomField>