sfdx/force-app/main/default/objects/Activity/fields/LDGCRM_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Meeting_Type__c</fullName>
    <description>Category or purpose of the meeting.</description>
    <inlineHelpText>Category or purpose of the meeting.</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro Call</fullName>
            </value>
            <value>
                <fullName>Technical Consultation</fullName>
            </value>
            <value>
                <fullName>BD Ad-hoc Follow Up</fullName>
            </value>
            <value>
                <fullName>AM Ad-hoc Follow Up</fullName>
            </value>
            <value>
                <fullName>Exec Leadership</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Quarterly Business Review</fullName>
            </value>
            <value>
                <fullName>AM - Regular Sync</fullName>
            </value>
            <value>
                <fullName>Launch Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>