sfdx/force-app/main/default/objects/Activity/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>